# dotfiles

./: .aliases  .bash_profile  .dockerfunc  .extra  .gitignore  .gitmodules  .orgtutor.org  .spacemacs  .spacemacs_mc  .task_open_note  .taskrc  Brewfile  Makefile  README.md  ROADMAP.md  dotfiles.org
.claude/: CLAUDE.md
amp/: settings.json  settings.json.example
claude/: .env.template  README.md  claude_desktop_config.json  claude_desktop_config.json.example
claude-code/: CHIEF-OF-STAFF.md  CLAUDE.md  VAULT-AGENTS.md  WORKFLOW.md  mcp-servers.json  settings.json
claude-tui/: config.example.toml  pyproject.toml
claude-tui/claude_tui/: __init__.py  __main__.py  app.py  app.tcss  config.py  session.py  sessions.py
ghostty/: config
git/: config
helix/: config.toml  languages.toml
hudson/: README.md
iterm2/: Dotfiles-MinimalP10k.json
mcp-servers/obsidian-cli-mcp/: Makefile  pyproject.toml
mcp-servers/obsidian-cli-mcp/obsidian_cli_mcp/: __init__.py  __main__.py  cli.py  heading_patch.py  server.py
mcp-servers/obsidian-cli-mcp/tests/: test_cli.py  test_heading_patch.py  test_server.py
mcp-wrappers/: github-wrapper.sh  google-sheets-wrapper.sh  mcp-gsuite-wrapper.sh  obsidian-wrapper.sh
nvim/: lazy-lock.json
p10k/: .p10k.zsh
reference/: AD_HOC_TASKS.md  cos-config-home.md  cos-config-work.md
scripts/: claude-sessions  install-hudson.sh  install.sh  launchpad  link-vault-skills.sh  set-claude-env.sh  uninstall-hudson.sh  update-plugins.sh  zellij-help
site/: go.mod  hugo.yaml
yazi/: yazi.toml
zed/: settings.json
zellij/: config.kdl
(+97 files in other folders)
