[project]
name = "claude-tui"
version = "0.1.0"
description = "TUI process manager for Claude Code sessions"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
claude-tui = "claude_tui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
