[project]
name = "obsidian-cli-mcp"
version = "0.1.0"
description = "MCP server wrapping the official Obsidian CLI (v1.12+)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
]

[project.scripts]
obsidian-cli-mcp = "obsidian_cli_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
